# agcodex

./: .gitignore  CLAUDE.md  ENHANCEMENT_SUMMARY.md  LICENSE  NOTICE
codex-rs/: .gitignore  .pre-commit-config.yaml  ANYHOW_REMOVAL_STATUS.md  AST_COMPACTOR_FIX_SUMMARY.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  PLANS.md  QUERY_LIBRARY_USAGE.md  README.md  RELEASE_NOTES.md  SEMANTIC_INDEX_SUMMARY.md  TODO.md  TREE_SITTER_IMPLEMENTATION_PLAN.md  YAML_LOADER_IMPLEMENTATION.md  amp_tools.md  config.md  domain.md  gpt5-prompting-guide.md  implementation-guide-ast-rag.md  libmodes.rlib  publish_crates.sh  research-ast-rag.md  test_fd_find.rs  test_glob_standalone.rs  verify_yaml_config.py
codex-rs/.github/workflows/: ci.yml  release.yml  test.yml
codex-rs/agcodex/: Cargo.toml
codex-rs/agcodex-ast/: Cargo.toml
codex-rs/agcodex-ast/src/: compactor.rs  error.rs  language_registry.rs  lib.rs  parser_cache.rs  semantic_index.rs
codex-rs/agcodex/src/: main.rs
codex-rs/agents/: README.md  code-reviewer.toml  debugger.toml  docs.toml  performance.toml  refactorer.toml  security.toml  test-writer.toml
codex-rs/agents/templates/: base-agent.toml
codex-rs/ansi-escape/: Cargo.toml  README.md
codex-rs/apply-patch/: Cargo.toml
codex-rs/apply-patch/src/: error.rs  lib.rs  seek_sequence.rs
codex-rs/arg0/: Cargo.toml
codex-rs/arg0/src/: error.rs  lib.rs
codex-rs/assets/: banner.txt  branding_guidelines.md  logo.txt
codex-rs/ast/: Cargo.toml
codex-rs/ast/src/: language_registry.rs  lib.rs  parser_cache.rs  semantic_index.rs  types.rs
codex-rs/benches/: BENCHMARK_ARCHITECTURE.md  Cargo.toml  README.md  agent_bench.rs  compression_bench.rs  mode_bench.rs  search_bench.rs  session_bench.rs  verify_benchmarks.sh
codex-rs/chatgpt/: Cargo.toml  README.md
codex-rs/chatgpt/src/: apply_command.rs  chatgpt_client.rs  chatgpt_token.rs  error.rs  get_task.rs
codex-rs/chatgpt/tests/: apply_command_e2e.rs  task_turn_fixture.json
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: debug_sandbox.rs  error.rs  lib.rs  login.rs  main.rs  proto.rs
codex-rs/common/: Cargo.toml  README.md
codex-rs/common/src/: approval_mode_cli_arg.rs  approval_presets.rs  config_override.rs  config_summary.rs  model_presets.rs  sandbox_mode_cli_arg.rs  sandbox_summary.rs
codex-rs/core/: Cargo.toml  README.md  libbenchmarks.rlib  prompt.md
codex-rs/core/benches/: subagent_benchmarks.rs
codex-rs/core/examples/: agent_invocation_example.rs  ast_compactor_basic.rs  ast_compactor_demo.rs  code_tools_integration_example.rs  enhanced_error_system_demo.rs  error_integration_example.rs  glob_demo.rs  glob_demo_simple.rs  grep_demo.rs  grep_demo_simple.rs  index_demo.rs  mode_enforcement.rs  patch_demo.rs  search_demo.rs  think_intensity_demo.rs  tree_demo_simple.rs  tree_tool_usage.rs
codex-rs/core/src/: apply_patch.rs  bash.rs  chat_completions.rs  client.rs  client_common.rs  codex.rs  codex_conversation.rs  config.rs  config_profile.rs  config_types.rs  conversation_history.rs  conversation_manager.rs  conversation_manager_ext.rs  embeddings_capability.rs  environment_context.rs  error.rs  exec.rs  exec_env.rs  git_info.rs  is_safe_command.rs  landlock.rs  lib.rs  mcp_connection_manager.rs  message_history.rs  model_family.rs  model_provider_info.rs  models.rs  modes.rs  openai_model_info.rs  openai_tools.rs  parse_command.rs  plan_tool.rs  project_doc.rs  prompt_for_compact_command.md  rollout.rs  safety.rs  test_type_safety.rs  turn_diff_tracker.rs  types.rs  user_agent.rs  (+1 more)
codex-rs/core/tests/: cli_stream.rs  client.rs  compact.rs  edit_tool_test.rs  exec.rs  exec_stream_events.rs  integration_ast_compactor.rs  integration_code_tools.rs  integration_semantic_index.rs  live_cli.rs  prompt_caching.rs  seatbelt.rs  stream_error_allows_next_turn.rs  stream_no_completed.rs  test_agent_invocation.rs
codex-rs/demos/demo_scripts/: agent_invocation.md  mode_switching.md
codex-rs/docs/: AGENT_COOKBOOK.md  AGENT_GUIDE.md  MODE_ENFORCEMENT.md  USER_GUIDE.md  protocol_v1.md
codex-rs/example-agents/: README.md  code-reviewer.yaml  refactorer.yaml  test-writer.yaml
codex-rs/examples/: README.md  advanced_features.md  agent_workflows.md  agent_workflows.rs  basic_usage.md
codex-rs/examples/configuration_templates/: full_featured_config.toml  local_llm_config.toml  minimal_config.toml  team_config.toml
codex-rs/examples/custom_agents/: api_designer.yaml  database_expert.yaml  deployment_assistant.yaml  react_specialist.yaml
codex-rs/exec/: Cargo.toml
codex-rs/exec/src/: cli.rs  error.rs  event_processor.rs  event_processor_with_human_output.rs  event_processor_with_json_output.rs  lib.rs  main.rs
codex-rs/exec/tests/: apply_patch.rs  sandbox.rs
codex-rs/execpolicy/: Cargo.toml  README.md
codex-rs/execpolicy/src/: arg_matcher.rs  arg_type.rs  execv_checker.rs  main.rs  opt.rs
codex-rs/execpolicy/tests/: bad.rs  cp.rs  good.rs  head.rs  literal.rs  ls.rs  parse_sed_command.rs  pwd.rs  sed.rs
codex-rs/file-search/: Cargo.toml  README.md
codex-rs/file-search/src/: error.rs  lib.rs  main.rs
codex-rs/linux-sandbox/: Cargo.toml  README.md
codex-rs/linux-sandbox/src/: landlock.rs  lib.rs  linux_run_main.rs  main.rs
codex-rs/linux-sandbox/tests/: landlock.rs
codex-rs/login/: Cargo.toml
codex-rs/login/src/: lib.rs  server.rs  token_data.rs
codex-rs/mcp-client/: Cargo.toml
codex-rs/mcp-server/: Cargo.toml
codex-rs/mcp-types/: Cargo.toml
codex-rs/ollama/: Cargo.toml
codex-rs/persistence/: Cargo.toml
codex-rs/protocol/: Cargo.toml  README.md
codex-rs/protocol-ts/: Cargo.toml
codex-rs/scripts/: create-symlink.sh  create_github_release.sh  install.ps1  install.sh  migrate-config.sh  rebrand-efficient.sh  rebrand.sh  setup-pre-commit.sh  uninstall.sh
codex-rs/test_bash/: Cargo.toml  test_bash_parser.rs
codex-rs/tests/: README.md  README_INTEGRATION_TESTS.md  README_TESTS.md  agent_integration.rs  agent_invocation.rs  lib.rs  mode_switching.rs  session_management.rs
codex-rs/tui/: Cargo.toml  SESSION_BROWSER_IMPLEMENTATION.md  styles.md
(+243 files in other folders)
