[package]
name = "agcodex"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AGCodex - AI-powered coding assistant with AST-based intelligence"
default-run = "agcodex-main"
keywords = ["ai", "coding-assistant", "ast", "tree-sitter", "llm"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "agcodex-main"
path = "src/main.rs"

[dependencies]
# Core dependencies that will be needed for the main binary
clap = { workspace = true, features = ["derive", "env"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
color-eyre = { workspace = true }

# Internal crate dependencies (to be uncommented as needed)
# agcodex-core = { path = "../core", version = "0.1.0" }
# agcodex-tui = { path = "../tui", version = "0.1.0" }
# agcodex-cli = { path = "../cli", version = "0.1.0" }
# agcodex-exec = { path = "../exec", version = "0.1.0" }
# agcodex-persistence = { path = "../persistence", version = "0.1.0" }

[lints]
workspace = true
