[package]
edition.workspace = true
name = "codex-apply-patch"
version = { workspace = true }
license = { workspace = true }

[lib]
name = "codex_apply_patch"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
similar = { workspace = true }
thiserror = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-bash = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
