[package]
edition.workspace = true
name = "agcodex-apply-patch"
version = { workspace = true }
description = "AST-aware patch application with precise location tracking"
homepage = "https://github.com/agcodex/agcodex"
repository = "https://github.com/agcodex/agcodex"
documentation = "https://docs.rs/agcodex-apply-patch"
keywords = ["ai", "coding-assistant", "ast", "tree-sitter", "llm"]
categories = ["development-tools", "command-line-utilities"]
license = { workspace = true }

[lib]
name = "agcodex_apply_patch"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
similar = { workspace = true }
thiserror = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-bash = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
