[package]
edition.workspace = true
name = "codex-arg0"
version = { workspace = true }
license = { workspace = true }

[lib]
name = "codex_arg0"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
codex-apply-patch = { path = "../apply-patch" }
codex-core = { path = "../core" }
codex-linux-sandbox = { path = "../linux-sandbox" }
dotenvy = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
