[package]
edition.workspace = true
name = "agcodex-arg0"
version = { workspace = true }
license = { workspace = true }

[lib]
name = "agcodex_arg0"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
agcodex-apply-patch = { path = "../apply-patch" }
agcodex-core = { path = "../core" }
agcodex-linux-sandbox = { path = "../linux-sandbox" }
dotenvy = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
