[package]
edition = "2024"
name = "agcodex-benchmarks"
publish = false
version = "0.1.0"

[dependencies]
# Core dependencies
agcodex-ast = { path = "../ast" }
agcodex-core = { path = "../core" }
agcodex-persistence = { path = "../persistence" }

# Benchmarking
criterion = { workspace = true, features = ["html_reports"] }

# Async runtime
futures = "0.3"
tokio = { version = "1.42", features = ["full", "test-util"] }

# Data structures
dashmap = "6.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File handling
tempfile = "3.14"

# UUID generation
uuid = { version = "1.10", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"

[[bench]]
harness = false
name = "compression_bench"
path = "compression_bench.rs"

[[bench]]
harness = false
name = "search_bench"
path = "search_bench.rs"

[[bench]]
harness = false
name = "agent_bench"
path = "agent_bench.rs"

[[bench]]
harness = false
name = "session_bench"
path = "session_bench.rs"

[[bench]]
harness = false
name = "mode_bench"
path = "mode_bench.rs"
