[package]
edition.workspace = true
name = "agcodex-chatgpt"
version = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
agcodex-common = { path = "../common", features = ["cli"] }
agcodex-core = { path = "../core" }
agcodex-login = { path = "../login" }
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
tempfile = "3"
