[package]
edition.workspace = true
name = "agcodex-chatgpt"
version = { workspace = true }
description = "ChatGPT authentication and session management"
homepage = "https://github.com/agcodex/agcodex"
repository = "https://github.com/agcodex/agcodex"
documentation = "https://docs.rs/agcodex-chatgpt"
keywords = ["ai", "coding-assistant", "ast", "tree-sitter", "llm"]
categories = ["development-tools", "command-line-utilities"]
license = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
agcodex-common = { path = "../common", version = "0.1.0", features = ["cli"] }
agcodex-core = { path = "../core", version = "0.1.0" }
agcodex-login = { path = "../login", version = "0.1.0" }
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
