[package]
edition.workspace = true
name = "agcodex-cli"
version = { workspace = true }
license = { workspace = true }

[[bin]]
name = "agcodex"
path = "src/main.rs"

[lib]
name = "agcodex_cli"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true, features = ["derive"] }
clap_complete = { workspace = true }
agcodex-arg0 = { path = "../arg0" }
agcodex-chatgpt = { path = "../chatgpt" }
agcodex-common = { path = "../common", features = ["cli"] }
agcodex-core = { path = "../core" }
agcodex-exec = { path = "../exec" }
agcodex-login = { path = "../login" }
agcodex-mcp-server = { path = "../mcp-server" }
agcodex-protocol = { path = "../protocol" }
agcodex-tui = { path = "../tui" }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
agcodex-protocol-ts = { path = "../protocol-ts" }