[package]
edition.workspace = true
name = "agcodex-cli"
version = { workspace = true }
description = "Command-line interface for AGCodex"
homepage = "https://github.com/agcodex/agcodex"
repository = "https://github.com/agcodex/agcodex"
documentation = "https://docs.rs/agcodex-cli"
keywords = ["ai", "coding-assistant", "ast", "tree-sitter", "llm"]
categories = ["development-tools", "command-line-utilities"]
license = { workspace = true }

[[bin]]
name = "agcodex"
path = "src/main.rs"

[lib]
name = "agcodex_cli"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true, features = ["derive"] }
clap_complete = { workspace = true }
agcodex-arg0 = { path = "../arg0" }
agcodex-chatgpt = { path = "../chatgpt", version = "0.1.0" }
agcodex-common = { path = "../common", version = "0.1.0", features = ["cli"] }
agcodex-core = { path = "../core", version = "0.1.0" }
agcodex-exec = { path = "../exec", version = "0.1.0" }
agcodex-login = { path = "../login", version = "0.1.0" }
agcodex-mcp-server = { path = "../mcp-server", version = "0.1.0" }
agcodex-protocol = { path = "../protocol", version = "0.1.0" }
agcodex-tui = { path = "../tui", version = "0.1.0" }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
agcodex-protocol-ts = { path = "../protocol-ts", version = "0.1.0" }
