[package]
edition.workspace = true
name = "agcodex-common"
version = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[dependencies]
clap = { workspace = true, features = ["derive", "wrap_help"], optional = true }
agcodex-core = { path = "../core" }
agcodex-protocol = { path = "../protocol" }
serde = { workspace = true, optional = true }
toml = { workspace = true, optional = true }

[features]
# Separate feature so that `clap` is not a mandatory dependency.
cli = ["clap", "serde", "toml"]
elapsed = []
sandbox_summary = []
