[package]
edition.workspace = true
name = "agcodex-core"
version = { workspace = true }
license = { workspace = true }

[lib]
name = "agcodex_core"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
async-channel = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
dashmap = { workspace = true }
agcodex-apply-patch = { path = "../apply-patch" }
ast = { path = "../ast" }
agcodex-login = { path = "../login" }
agcodex-mcp-client = { path = "../mcp-client" }
agcodex-protocol = { path = "../protocol" }
dirs = { workspace = true }
env-flags = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
libc = { workspace = true }
agcodex-mcp-types = { path = "../mcp-types" }
mime_guess = { workspace = true }
os_info = { workspace = true }
rand = { workspace = true }
regex-lite = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
sha1 = { workspace = true }
shlex = { workspace = true }
similar = { workspace = true }
strum_macros = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["formatting", "local-offset", "macros"] }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tokio-util = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tree-sitter = { workspace = true }
tree-sitter-bash = { workspace = true }
rayon = { workspace = true }
ignore = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
walkdir = { workspace = true }
whoami = { workspace = true }
wildmatch = { workspace = true }


[target.'cfg(target_os = "linux")'.dependencies]
landlock = { workspace = true }
seccompiler = { workspace = true }

# Build OpenSSL from source for musl builds.
[target.x86_64-unknown-linux-musl.dependencies]
openssl-sys = { version = "*", features = ["vendored"] }

# Build OpenSSL from source for musl builds.
[target.aarch64-unknown-linux-musl.dependencies]
openssl-sys = { version = "*", features = ["vendored"] }

[dev-dependencies]
assert_cmd = "2"
core_test_support = { path = "tests/common" }
criterion = { workspace = true }
maplit = "1.0.2"
predicates = "3"
pretty_assertions = "1.4.1"
tempfile = { workspace = true }
tokio-test = "0.4"
walkdir = "2.5.0"
wiremock = "0.6"

[[bench]]
name = "subagent_benchmarks"
harness = false
path = "src/subagents/benchmarks.rs"
