[package]
edition.workspace = true
name = "agcodex-exec"
version = { workspace = true }
license = { workspace = true }

[[bin]]
name = "agcodex-exec"
path = "src/main.rs"

[lib]
name = "agcodex_exec"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
agcodex-arg0 = { path = "../arg0" }
agcodex-common = { path = "../common", features = [
    "cli",
    "elapsed",
    "sandbox_summary",
] }
agcodex-core = { path = "../core" }
agcodex-ollama = { path = "../ollama" }
agcodex-protocol = { path = "../protocol" }
owo-colors = { workspace = true }
serde_json = { workspace = true }
shlex = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
assert_cmd = { workspace = true }
core_test_support = { path = "../core/tests/common" }
libc = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }
